# try-libevent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autobuild.debug.sh  main.cpp  run_cli.sh  run_srv.sh
cmake/: buildobject.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/common/: AWCommon.h  AWNet.cpp  AWNet.h  CMakeLists.txt  common.h
src/server/: AWNet.cpp  AWNet.h  CMakeLists.txt  server.cpp
src/tests/: CMakeLists.txt
src/tests/externc/: .gitignore  build.sh  foo.c  foo.h  main.cpp
src/tests/get_method/: CMakeLists.txt  main.cpp
src/tests/t-evbuffer/: CMakeLists.txt  main.cpp
tools/: run_debug_cli.sh  run_debug_srv.sh
